# opsgate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml
.sqlx/: query-ac2af52035a7ff30c097585af4c63026ce9abe8c71457e3c57385b960a8f42ab.json  query-cc31caa275039cccad300c77b4e0121f4534c163a33f5a2b0bd18cd605a96ac7.json
backend/: Dockerfile
backend/crates/api/: Cargo.toml
backend/crates/api/src/: error.rs  main.rs  me.rs  request_context.rs  routes.rs  state.rs
backend/crates/api/src/api_call/: mod.rs  service.rs  target.rs
backend/crates/api/src/audit/: actor.rs  auth.rs  event.rs  mcp.rs  mod.rs  request.rs  runtime.rs  safe.rs  target.rs
backend/crates/api/src/auth/: audit.rs  bearer.rs  bearer_extractor.rs  bearer_tests.rs  jwks.rs  metadata.rs  mod.rs  oauth.rs  oauth_client.rs  oauth_exchange.rs  oauth_flow.rs  oidc.rs  page.rs
backend/crates/api/src/auth/bearer/: error.rs  extractor.rs  middleware.rs  mod.rs  verify.rs
backend/crates/api/src/credential/: mod.rs  service.rs  snapshot.rs
backend/crates/api/src/identity/: adapter.rs  me.rs  mod.rs
backend/crates/api/src/identity/me/: mod.rs  output.rs  rest.rs
backend/crates/api/src/mcp/: server.rs
backend/crates/api/src/mcp/tools/: api_call.rs  audit.rs  context.rs  credentials.rs  error.rs  me.rs  mod.rs  sql_query.rs  sql_schema.rs
backend/crates/api/src/rest/: api_call.rs  credentials.rs  me.rs  mod.rs  sql_query.rs
backend/crates/api/src/sql_common/: mod.rs  secret.rs  target.rs
backend/crates/api/src/sql_query/: mod.rs  service.rs
backend/crates/api/src/sql_schema/: mod.rs  service.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: config.rs  error.rs  lib.rs  schema.rs  tls.rs  validation.rs
backend/crates/core/src/crypto/: cipher.rs  mod.rs  sealer.rs
backend/crates/core/src/llm_output/: json.rs  mod.rs
backend/crates/core/src/net/: ssrf.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 0001_init.sql  0002_users_oauth.sql  0003_credentials.sql  0004_credentials_delete_secret.sql  0005_credential_audit_events.sql  0006_api_call_history.sql  0007_audit_logs.sql  0008_sql_query_history.sql  0009_identity_roles.sql  0010_credential_lifecycle_history.sql  0011_runtime_least_privilege.sql  0012_credential_audit_request_metadata.sql
backend/crates/db/src/: api_call_history_repo.rs  audit_repo.rs  credential_repo.rs  lib.rs  sql_query_history_repo.rs  user_repo.rs
backend/crates/db/tests/: audit_repo.rs  credential_lifecycle_migration.rs  credential_repo.rs  identity_roles_migration.rs  runtime_least_privilege.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs  user.rs
backend/crates/domain/src/credential/: header.rs  mod.rs  model.rs  policy.rs  validation.rs
backend/crates/domain/src/identity/: caller.rs  mod.rs  resolver.rs
docs/: README.md  mcp-tools.md  release-checklist.md  rust-port-parity-plan.md  rust-port-parity-review.md
docs/mcp/: api-call-boundary.md  json-output.md  smoke-report.md  sql-query-boundary.md  worst-cases.md
docs/mcp/surfaces/: admin.md  runtime.md
docs/mcp/tools/: api-call.md  credential-delete.md  credential-list.md  credential-register-http.md  credential-register-sql.md  credential-update-http.md  credential-update-sql.md  me.md  sql-query.md  sql-schema.md
