[package]
name = "opsgate-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "opsgate-api"
path = "src/main.rs"

[dependencies]
opsgate-core.workspace = true
opsgate-db.workspace = true
opsgate-domain.workspace = true

tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true

[lints]
workspace = true
