[package]
name = "opsgate-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "opsgate-api"
path = "src/main.rs"

[dependencies]
opsgate-core.workspace = true
opsgate-db.workspace = true
opsgate-domain.workspace = true

tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true

jsonwebtoken.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
url.workspace = true
axum-extra.workspace = true
subtle.workspace = true
rmcp.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
schemars.workspace = true
time.workspace = true
sqlparser.workspace = true

[lints]
workspace = true
